k8s/applications/frontend/admin/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-admin-ingress
  labels:
    env: production
    tier: frontend
    app: admin
    name: frontend-admin-ingress
spec:
  rules:
    - host: <프론트엔드 관리자 도메인> # TODO
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-admin
                port:
                  number: 3000
